--- a/templates/base.html
+++ b/templates/base.html
@@ -50,9 +50,7 @@
             plugins: []
         }
     </script>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <script src="{% static 'js/scripts.js' %}"></script>
+    {% block extra_head %}{% endblock %}
 </head>
 
 <body>
